Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: web-Gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - e-robo.com
    port:
      name: http
      number: 80
      protocol: HTTP
