DestinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: web
spec:
  host: e-robo.com
  subsets:
   - name: v1
     labels:
       version: v1
   - name: v2
     labels:
       version: v2
