VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web
spec:
  gateways:
    - web
  hosts:
    - e-robo.com
  http:
    - route:
        - destination:
            host: web.svc.cluster.local
            port:
              number: 8080
